<feat>: update sentences

--- a/index.html
+++ b/index.html
@@ -462,10 +462,10 @@
               <!-- <td width="100%" valign="center" style="line-height: 15px;"> -->
               <td width="100%" style="width:100%; padding:0 0px;">
                 <ul class="navlist">
-                  <li> <strong>Advanced Artificial Intelligence</strong>, Teaching Assistant - Fall 2023</li>
+                  <li> <strong>Advanced Artificial Intelligence</strong>, <i>Teaching Assistant - Fall 2023</i></li>
                 </ul>
                 <ul class="navlist">
-                  <li><strong>Computer Vision</strong>, Teaching Assistant - Spring 2023</li>
+                  <li><strong>Computer Vision</strong>, <i>Teaching Assistant - Spring 2023</i></li>
                 </ul>
               </td>
             </tr>
