<feat>: update setences

--- a/index.html
+++ b/index.html
@@ -524,10 +524,10 @@
             <td style="padding:0px">
               <br>
               <p style="text-align:right;font-size:small;">
-                Source code from <a href="https://jonbarron.info/">Jon Barron</a>,
+                Source codes are from <a href="https://jonbarron.info/">Jon Barron</a>,
                 <a href="https://aljazbozic.github.io/">Aljaž Božič</a>,
                 <a href="https://xinntao.github.io/">XINTAO</a> and
-                <a href="https://yangekun.gitee.io/resume/">Ekun</a>.
+                <a href="https://yangekun.gitee.io/resume/">Ekun</a>. Thanks for their great codes!
               </p>
             </td>
           </tr>
