--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
 			<li><strong>National scholarship, National encouragement scholarship</strong>, <i>Ministry of Education of the People's Republic of China</i></li>
                 </ul>
                 <ul class="navlist">
-			<li><strong>Huawei PhD Fellowship</strong>, <i>Huawei Noah's Ark Lab</i></li>
+<!--			<li><strong>Huawei PhD Fellowship</strong>, <i>Huawei Noah's Ark Lab</i></li>-->
                 </ul>
                 <ul class="navlist">
 			<li><strong>The best freshman award, The S-level award</strong>, <i>Huya Information Technoloy</i></li>
@@ -427,7 +427,7 @@
 			<li><strong>Freshman Scholarship, Gongneng First-class scholarship</strong>, <i>Nankai University</i></li>
                 </ul>
                 <ul class="navlist">
-			<li><strong>The First prize in the 14-th Xidian Huawei Cup ACM/ICPC competition</strong>, <i>Huawei Technology</i></li>
+<!--			<li><strong>The First prize in the 14-th Xidian Huawei Cup ACM/ICPC competition</strong>, <i>Huawei Technology</i></li>-->
                 </ul>
                 <ul class="navlist">
 			<li><strong>The First prize of the 6-th national college students mathematics preliminary competition</strong>, <i>Chinese Mathematical Society</i></li>
