<feat>: update sentences

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               <p> Greetings! I'm Yang Cao, a Ph.D. student in <a href="https://www.ust.hk/home">HKUST</a> supervised by <a href="https://www.danxurgb.net/">Prof. Dan Xu</a>.
               </p>
               <p>
-                Before that, I received my Master's Degree in Computer Science from <a href="https://en.nankai.edu.cn/">NanKai University</a>, supervised by <a href="https://mmcheng.net/cmm/">Prof. Ming-Ming Cheng</a>.
+                Before that, I received my Master's Degree in Computer Science from <a href="https://en.nankai.edu.cn/">Nankai University</a>, supervised by <a href="https://mmcheng.net/cmm/">Prof. Ming-Ming Cheng</a>.
               </p>
               <p>
                 My recent research interests mainly focus on the topics which are interesting and have large application potential in the real world, like <strong>3D vision, open-vocabulary perception</strong> and <strong>multi-modal learning</strong>. I'm open to more valuable and interesting topics. Constructive discussions are always welcome. Feel free to contact me via email :)
