<feat>: update infos

--- a/index.html
+++ b/index.html
@@ -387,9 +387,9 @@
 			<li><strong>Huya Information Technology Co.,Ltd</strong>
         <i>2020.07-2022.2, Multimedia Technology Engineer-AI</i><br> 1.Research: Transparent Object Detection task. <br> 2. Project: Image Super-Resolution. Develop SR models for popular game lives. Provide a live streaming experience in 4K resolution. <br> 3. Project: Model Compression. Compress the SR models for the online deployment to save half of cost. <br> 4. Project: The first SDR2HDR model for LOL game live. Over <strong>4.5 million users</strong> utilized my algorithm during the game finals.</li>
                 </ul>
-                <ul class="navlist">
-			<li><strong>Megvii Institute (also known as Face++)</strong> <i>2019.04-2019.07, Research intern</i><br> Research: Keypoint-based object detection.</li>
-                </ul>
+<!--                <ul class="navlist">-->
+<!--			<li><strong>Megvii Institute (also known as Face++)</strong> <i>2019.04-2019.07, Research intern</i><br> Research: Keypoint-based object detection.</li>-->
+<!--                </ul>-->
 
               </td>
             </tr>
