<feat>: update infors

--- a/index.html
+++ b/index.html
@@ -387,9 +387,9 @@
 			<li><strong>Huya Information Technology Co.,Ltd</strong>
         <i>2020.07-2022.2, Multimedia Technology Engineer-AI</i><br> 1.Research: Transparent Object Detection task. <br> 2. Project: Image Super-Resolution. Develop SR models for popular game lives. Provide a live streaming experience in 4K resolution. <br> 3. Project: Model Compression. Compress the SR models for the online deployment to save half of cost. <br> 4. Project: The first SDR2HDR model for LOL game live. Over <strong>4.5 million users</strong> utilized my algorithm during the game finals.</li>
                 </ul>
-<!--                <ul class="navlist">-->
-<!--			<li><strong>Megvii Institute (also known as Face++)</strong> <i>2019.04-2019.07, Research intern</i><br> Research: Keypoint-based object detection.</li>-->
-<!--                </ul>-->
+                <ul class="navlist">
+			<li><strong>Megvii Institute (also known as Face++)</strong> <i>2019.04-2019.07, Research intern</i><br> Research: Keypoint-based object detection.</li>
+                </ul>
 
               </td>
             </tr>
@@ -418,7 +418,7 @@
 			<li><strong>National scholarship, National encouragement scholarship</strong>, <i>Ministry of Education of the People's Republic of China</i></li>
                 </ul>
                 <ul class="navlist">
-<!--			<li><strong>Huawei PhD Fellowship</strong>, <i>Huawei Noah's Ark Lab</i></li>-->
+			<li><strong>Huawei PhD Fellowship</strong>, <i>Huawei Noah's Ark Lab</i></li>
                 </ul>
                 <ul class="navlist">
 			<li><strong>The best freshman award, The S-level award</strong>, <i>Huya Information Technoloy</i></li>
@@ -427,7 +427,7 @@
 			<li><strong>Freshman Scholarship, Gongneng First-class scholarship</strong>, <i>Nankai University</i></li>
                 </ul>
                 <ul class="navlist">
-<!--			<li><strong>The First prize in the 14-th Xidian Huawei Cup ACM/ICPC competition</strong>, <i>Huawei Technology</i></li>-->
+			<li><strong>The First prize in the 14-th Xidian Huawei Cup ACM/ICPC competition</strong>, <i>Huawei Technology</i></li>
                 </ul>
                 <ul class="navlist">
 			<li><strong>The First prize of the 6-th national college students mathematics preliminary competition</strong>, <i>Chinese Mathematical Society</i></li>
