<feat>: update the username

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <!-- <a href="data/JonBarron-bio.txt">Bio</a> &nbsp/&nbsp -->
                 <a href="https://scholar.google.com/citations?user=VuKS1VQAAAAJ">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://twitter.com/yangcao_">Twitter</a> &nbsp/&nbsp
-                <a href="https://github.com/yangcao1996">Github</a> &nbsp/&nbsp
+                <a href="https://github.com/yangcaoai">Github</a> &nbsp/&nbsp
 		<a href="https://www.linkedin.com/in/yang-cao-75b864148">LinkedIn</a>
               </p>
             </td>
@@ -200,7 +200,7 @@
               <br>
               <!-- <a href="gbinet">project page</a> /-->
               <a href="https://arxiv.org/abs/2103.13279">paper</a> /
-              <a href="https://github.com/yangcao1996/fanet">code</a>
+              <a href="https://github.com/yangcaoai/fanet">code</a>
               <!-- <a href="data/BarronMalikECCV2012.bib">bibtex</a> / -->
               <!-- <a href="https://drive.google.com/file/d/12x8mhqpFsA6p0u6ZQW-ieRKF8hlQBKKe/view?usp=sharing">poster</a> / -->
               <!-- <a href="http://www.youtube.com/watch?v=NnePYprvFvA">video</a> -->
