--- a/publications/CoDA.html
+++ b/publications/CoDA.html
@@ -66,13 +66,13 @@
             <div class="col-md-12 text-center">
                 <ul class="list-inline">
                     <li>
-                        <a href="https://yangcao1996.github.io/">
+                        <a href="https://yangcaoai.github.io/">
                           Yang Cao
                         </a>
                         </br>HKUST
                     </li>
                     <li>
-<!--                        <a href="https://yangcao1996.github.io/">-->
+<!--                        <a href="https://yangcaoai.github.io/">-->
                           Yihan Zeng
 <!--                        </a>-->
                         </br>Huawei Noah's Ark Lab
