<feat>: update sentences

--- a/publications/CoDA.html
+++ b/publications/CoDA.html
@@ -221,9 +221,9 @@ Extensive experiments on two challenging datasets (<i>i.e.</i>, SUN-RGBD and Sca
                 </h3>
                 <p class="text-justify">
                     Our code follows several awesome repositories such as
-                    <a href="https://github.com/openai/CLIP">CLIP</a>,
+                    <a href="https://github.com/openai/CLIP">CLIP</a> and
                     <a href="https://github.com/facebookresearch/3detr">3DETR</a>.
-                    We appreciate them for making their codes available to public.
+                    We appreciate their great codes.
 <!--                    <br>-->
 <!--                    This research is supported in part by HKUST-SAIL joint research funding,-->
 <!--                    the Early Career Scheme of the Research Grants Council (RGC) of-->
