<feat>: update the code links

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             </td>
             <td width="75%" valign="middle">
                <!-- <a href="switchnerf"> -->
-                <papertitle>Collaborative Novel Box Discovery and Cross-modal Alignment for Open-vocabulary 3D Object Detection</papertitle>
+                <papertitle>CoDA: Collaborative Novel Box Discovery and Cross-modal Alignment for Open-vocabulary 3D Object Detection</papertitle>
               </a>
               <br>
               <strong>Yang Cao</strong>, Yihan Zeng, Hang Xu, Dan Xu.
