--- a/index.html
+++ b/index.html
@@ -160,8 +160,11 @@
               <em>NeurIPS</em>, 2023
               <br>
               <!-- <a href="switchnerf">project page</a> / -->
+              <a href="https://arxiv.org/abs/2310.02960">paper</a> /
+              <a href="https://github.com/yangcaoai/CoDA_NeurIPS2023">code</a>
               <a href="https://openreview.net/forum?id=QW5ouyyIgG">openreview</a> /
-              Code and paper will be updated soon.
+              <a href="https://yangcaoai.github.io/publications/CoDA.html">project</a> 
+<!--              Code and paper will be updated soon.-->
               <!-- <a href="data/BarronMalikECCV2012.bib">bibtex</a> / -->
               <!-- <a href="https://drive.google.com/file/d/12x8mhqpFsA6p0u6ZQW-ieRKF8hlQBKKe/view?usp=sharing">poster</a> / -->
               <!-- <a href="http://www.youtube.com/watch?v=NnePYprvFvA">video</a> -->
