--- a/publications/CoDA.html
+++ b/publications/CoDA.html
@@ -15,12 +15,12 @@
     <!-- <base href="/"> -->
 
         <!--FACEBOOK-->
-    <meta property="og:image" content="https://jonbarron.info/mipnerf/img/rays_square.png">
+    <meta property="og:image" content="https://github.com/yangcaoai/CoDA_NeurIPS2023/blob/main/assets/ov3d_det.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="682">
     <meta property="og:image:height" content="682">
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://harlanhong.github.io/publications/CoDA.html"/>
+    <meta property="og:url" content="https://yangcaoai.github.io/publications/CoDA.html"/>
     <meta property="og:title" content="CoDA" />
     <meta property="og:description" content="Project page for CoDA: Collaborative Novel Box Discovery and Cross-modal Alignment for Open-vocabulary 3D Object Detection." />
 
