--- a/publications/CoDA.html
+++ b/publications/CoDA.html
@@ -15,7 +15,7 @@
     <!-- <base href="/"> -->
 
         <!--FACEBOOK-->
-    <meta property="og:image" content="https://github.com/yangcaoai/CoDA_NeurIPS2023/blob/main/assets/ov3d_det.png">
+    <meta property="og:image" content="https://raw.githubusercontent.com/yangcaoai/CoDA_NeurIPS2023/main/assets/ov3d_det.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="682">
     <meta property="og:image:height" content="682">
