<feat>: update the bibtex for CoDA

--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
             </td>
             <td width="75%" valign="middle">
                <!-- <a href="switchnerf"> -->
+              <a href="https://arxiv.org/pdf/2310.02960.pdf">
                 <papertitle>CoDA: Collaborative Novel Box Discovery and Cross-modal Alignment for Open-vocabulary 3D Object Detection</papertitle>
               </a>
               <br>
