--- a/publications/CoDA.html
+++ b/publications/CoDA.html
@@ -175,6 +175,31 @@ Extensive experiments on two challenging datasets (<i>i.e.</i>, SUN-RGBD and Sca
         </div>
 
 
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+                <h3>
+                    BibTeX
+                </h3>
+                <p class="text-justify">
+                    If CoDA is helpful for you, please cite:
+<pre>
+@misc{cao2023coda,
+      title={CoDA: Collaborative Novel Box Discovery and Cross-modal Alignment for Open-vocabulary 3D Object Detection},
+      author={Yang Cao and Yihan Zeng and Hang Xu and Dan Xu},
+      year={2023},
+      eprint={2310.02960},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+</pre>
+<!--                    <br>-->
+<!--                    This research is supported in part by HKUST-SAIL joint research funding,-->
+<!--                    the Early Career Scheme of the Research Grants Council (RGC) of-->
+<!--                    the Hong Kong SAR under grant No. 26202321 and HKUST Startup Fund No. R9253.-->
+<!--                    <br>-->
+                </p>
+            </div>
+        </div>
 
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
