<feat>: update the bib for CoDA

--- a/publications/CoDA.html
+++ b/publications/CoDA.html
@@ -183,13 +183,11 @@ Extensive experiments on two challenging datasets (<i>i.e.</i>, SUN-RGBD and Sca
                 <p class="text-justify">
                     If CoDA is helpful for you, please cite:
 <pre>
-@misc{cao2023coda,
-      title={CoDA: Collaborative Novel Box Discovery and Cross-modal Alignment for Open-vocabulary 3D Object Detection},
-      author={Yang Cao and Yihan Zeng and Hang Xu and Dan Xu},
-      year={2023},
-      eprint={2310.02960},
-      archivePrefix={arXiv},
-      primaryClass={cs.CV}
+@inproceedings{cao2023coda,
+  title={CoDA: Collaborative Novel Box Discovery and Cross-modal Alignment for Open-vocabulary 3D Object Detection},
+  author={Cao, Yang and Zeng, Yihan and Xu, Hang  and  Xu, Dan},
+  booktitle={NeurIPS},
+  year={2023}
 }
 </pre>
 <!--                    <br>-->
