--- a/index.html
+++ b/index.html
@@ -496,8 +496,8 @@
               <!-- <td width="100%" valign="center" style="line-height: 15px;"> -->
               <td width="100%" style="width:100%; padding:0 0px;">
                 <ul class="navlist">
-                  <li>Reviewer for CVPR(2020, 2021, 2022, 2023, 2024), ICCV 2023, ECCV 2024, ACCV 2022, ICRA(2023, 2024), NeurIPS
-2023, ICLR 2024, TPAMI</li>
+                  <li>Reviewer for TPAMI, CVPR(2020, 2021, 2022, 2023, 2024), ICCV 2023, ECCV 2024, ACCV 2022, ICRA(2023, 2024), NeurIPS
+2023, ICLR 2024</li>
                 </ul>
               </td>
             </tr>
