--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 Before that, I received my Master's Degree in Computer Science from <a href="https://en.nankai.edu.cn/">Nankai University</a>, supervised by <a href="https://mmcheng.net/cmm/">Prof. Ming-Ming Cheng</a>.
               </p>
               <p>
-                My recent research interests mainly focus on the topics which are interesting and have large application potential in the real world, like <strong>3D vision, open-vocabulary perception</strong> and <strong>multi-modal learning</strong>. I'm open to more valuable and interesting topics. Constructive discussions are always welcome. Feel free to contact me via email :)
+                My recent research interests mainly focus on the topics which are interesting and have large application potential in the real world, like <strong>3D vision, open-vocabulary perception</strong> and <strong>multi-modal learning</strong>. I'm open to more valuable and interesting topics. Constructive discussions and cooperation are always welcome. Feel free to contact me via email. Alternatively, my WeChat is MrYangCS. 
               </p>
               <p style="text-align:center">
                 <a href="mailto:yangcao.cs@gmail.com">Email</a> &nbsp/&nbsp
