--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 My recent research interests mainly focus on the topics which are interesting and have large application potential in the real world, like <strong>3D vision, open-vocabulary perception</strong> and <strong>multi-modal learning</strong>, etc. 
               </p>
                 <p>
-                Constructive discussions and cooperations are always welcome. Feel free to contact me via email. Alternatively, my WeChat is MrYangCS 
+                Constructive discussions and cooperations are always welcome. Feel free to contact me via email. Alternatively, my WeChat is 85298328912 
               </p>
               <p style="text-align:center">
                 <a href="mailto:yangcao.cs@gmail.com">Email</a> &nbsp/&nbsp
