<feat>: update codav2

--- a/index.html
+++ b/index.html
@@ -131,7 +131,52 @@
           </tr>
         </tbody></table>
 
+  
+ <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
+          <tr onmouseout="switchnerf_stop()" onmouseover="switchnerf_start()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <!-- <div id='ssrnet_anim' class='hidden'>
+                <a href=""><img src="images/ECCV2012_small.gif"></a>
+              </div> -->
+              <div id='switchnerf_still'><img src="images/codav2.png" width="200"></div>
+              <script type="text/javascript">
+                function switchnerf_start() {
+                  document.getElementById('eccv12_anim').style.display = 'inline';
+                  document.getElementById('eccv12_still').style.display = 'none';
+                }
+
+                function switchnerf_stop() {
+                  document.getElementById('eccv12_anim').style.display = 'none';
+                  document.getElementById('eccv12_still').style.display = 'inline';
+                }
+                switchnerf_stop()
+              </script>
+            </td>
+            <td width="75%" valign="middle">
+               <!-- <a href="switchnerf"> -->
+              <a href="https://arxiv.org/pdf/2406.00830.pdf">
+                <papertitle>CoDAv2: Collaborative Novel Object Discovery and Box-Guided Cross-Modal Alignment for Open-Vocabulary 3D Object Detection</papertitle>
+              </a>
+              <br>
+              <strong>Yang Cao</strong>, Yihan Zeng, Hang Xu, Dan Xu.
+              <br>
+              <em>Arxiv</em>, 2024
+              <br>
+              <!-- <a href="switchnerf">project page</a> / -->
+              <a href="https://arxiv.org/pdf/2406.00830">paper</a> /
+              <a href="https://github.com/yangcaoai/CoDA_NeurIPS2023">code</a> /
+<!--               <a href="https://openreview.net/forum?id=QW5ouyyIgG">openreview</a> /
+              <a href="https://yangcaoai.github.io/publications/CoDA.html">project</a> -->
+<!--              Code and paper will be updated soon.-->
+              <!-- <a href="data/BarronMalikECCV2012.bib">bibtex</a> / -->
+              <!-- <a href="https://drive.google.com/file/d/12x8mhqpFsA6p0u6ZQW-ieRKF8hlQBKKe/view?usp=sharing">poster</a> / -->
+              <!-- <a href="http://www.youtube.com/watch?v=NnePYprvFvA">video</a> -->
+              <!-- <p>This paper is subsumed by <a href="#SIRFS">SIRFS</a>.</p> -->
+            </td>
+          </tr>
+
+  
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
           <tr onmouseout="switchnerf_stop()" onmouseover="switchnerf_start()">
