--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
               <br>
               <!-- <a href="switchnerf">project page</a> / -->
               <a href="https://arxiv.org/pdf/2406.00830">paper</a> /
-              <a href="https://github.com/yangcaoai/CoDA_NeurIPS2023">code</a> /
+              <a href="https://github.com/yangcaoai/CoDA_NeurIPS2023">code</a> 
 <!--               <a href="https://openreview.net/forum?id=QW5ouyyIgG">openreview</a> /
               <a href="https://yangcaoai.github.io/publications/CoDA.html">project</a> -->
 <!--              Code and paper will be updated soon.-->
