--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 My recent research interests mainly focus on the topics which are interesting and have large application potential in the real world, like <strong>3D vision, open-vocabulary perception</strong> and <strong>multi-modal learning</strong>, etc. 
               </p>
                 <p>
-                Constructive discussions and cooperations are welcome. Feel free to contact me via email. Alternatively, my discord account is yangcao#9724 and WeChat ID is 85298328912 
+                Constructive discussions and cooperations are welcome. Feel free to contact me via email. 
               </p>
               <p style="text-align:center">
                 <a href="mailto:yangcao.cs@gmail.com">Email</a> &nbsp/&nbsp
