--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
               <!-- <a href="switchnerf">project page</a> / -->
               <a href="https://arxiv.org/pdf/2406.00830">paper</a> /
               <a href="https://github.com/yangcaoai/CoDA_NeurIPS2023">code</a> 
+              <a href="https://www.bilibili.com/video/BV1anV7e8EoD/?share_source=copy_web&vd_source=8e7b288f904dcf9e4dfb9432677c50ea">中文研讨视频</a> 
 <!--               <a href="https://openreview.net/forum?id=QW5ouyyIgG">openreview</a> /
               <a href="https://yangcaoai.github.io/publications/CoDA.html">project</a> -->
 <!--              Code and paper will be updated soon.-->
@@ -213,6 +214,7 @@
               <a href="https://github.com/yangcaoai/CoDA_NeurIPS2023">code</a> /
               <a href="https://openreview.net/forum?id=QW5ouyyIgG">openreview</a> /
               <a href="https://yangcaoai.github.io/publications/CoDA.html">project</a>
+                            <a href="https://www.bilibili.com/video/BV1anV7e8EoD/?share_source=copy_web&vd_source=8e7b288f904dcf9e4dfb9432677c50ea">中文研讨视频</a> 
 <!--              Code and paper will be updated soon.-->
               <!-- <a href="data/BarronMalikECCV2012.bib">bibtex</a> / -->
               <!-- <a href="https://drive.google.com/file/d/12x8mhqpFsA6p0u6ZQW-ieRKF8hlQBKKe/view?usp=sharing">poster</a> / -->
