--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
               <br>
               <!-- <a href="switchnerf">project page</a> / -->
               <a href="https://arxiv.org/pdf/2406.00830">paper</a> /
-              <a href="https://github.com/yangcaoai/CoDA_NeurIPS2023">code</a> 
+              <a href="https://github.com/yangcaoai/CoDA_NeurIPS2023">code</a> /
               <a href="https://www.bilibili.com/video/BV1anV7e8EoD/?share_source=copy_web&vd_source=8e7b288f904dcf9e4dfb9432677c50ea">Talk (in Chinese)</a> 
 <!--               <a href="https://openreview.net/forum?id=QW5ouyyIgG">openreview</a> /
               <a href="https://yangcaoai.github.io/publications/CoDA.html">project</a> -->
@@ -213,7 +213,7 @@
               <a href="https://arxiv.org/abs/2310.02960">paper</a> /
               <a href="https://github.com/yangcaoai/CoDA_NeurIPS2023">code</a> /
               <a href="https://openreview.net/forum?id=QW5ouyyIgG">openreview</a> /
-              <a href="https://yangcaoai.github.io/publications/CoDA.html">project</a>
+              <a href="https://yangcaoai.github.io/publications/CoDA.html">project</a> /
                             <a href="https://www.bilibili.com/video/BV1anV7e8EoD/?share_source=copy_web&vd_source=8e7b288f904dcf9e4dfb9432677c50ea">Talk (in Chinese)</a> 
 <!--              Code and paper will be updated soon.-->
               <!-- <a href="data/BarronMalikECCV2012.bib">bibtex</a> / -->
