--- a/index.html
+++ b/index.html
@@ -546,6 +546,7 @@
               <!-- <td width="100%" valign="center" style="line-height: 15px;"> -->
               <td width="100%" style="width:100%; padding:0 0px;">
                 <ul class="navlist">
+                  <li>Programme Committee for AAAI.</li>
                   <li>Reviewer for TPAMI, TIP, CVPR, ICCV, ECCV, ICRA, NeurIPS, ICLR, ICML, MM, etc. </li>
                 </ul>
               </td>
