--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                       <li style="font-size:20px"><a class='name' href="#research">Research</a></li>
                     <li style="font-size:20px"><a class='name' href="#industry">Industry</a></li>
                     <li style="font-size:20px"><a class='name' href="#awards">Awards</a></li>
-                      <li style="font-size:20px"><a class='name' href="#teaching">Teaching</a></li>
                     <li style="font-size:20px"><a class='name' href="#service">Service</a></li>
+                    <li style="font-size:20px"><a class='name' href="#teaching">Teaching</a></li>
                   </ul>
                 </div>
               </div>
@@ -439,7 +439,8 @@
               <td width="100%" style="width:100%; padding:0 0px;">
                 <ul class="navlist">
 			<li><strong>Huya Information Technology Co.,Ltd</strong>
-        <i>2020.07-2022.2, Multimedia Technology Engineer-AI</i><br> 1.Research: Transparent Object Detection task. <br> 2. Project: Image Super-Resolution. Develop SR models for popular game lives. Provide a live streaming experience in 4K resolution. <br> 3. Project: Model Compression. Compress the SR models for the online deployment to save half of cost. <br> 4. Project: The first SDR2HDR model for LOL game live. Over <strong>4.5 million users</strong> utilized my algorithm during the game finals.</li>
+        <i>2020.07-2022.2, Multimedia Technology Engineer-AI</i><br> 1.Research: Transparent Object Detection task. <br> 2. Project: Image Super-Resolution. Develop SR models for popular game lives. Provide a live streaming experience in 4K resolution. <br> 3. Project: Model Compression. Compress the SR models for the online deployment to save half of cost. <br> 4. Project: The first SDR2HDR model for LOL game live,
+applied at the League of Legends 2021 World Championship. Over <strong>4.5 million users</strong> utilized my algorithm during the game finals.</li>
                 </ul>
                 <ul class="navlist">
 			<li><strong>Megvii Institute (also known as Face++)</strong> <i>2019.04-2019.07, Research intern</i><br> Research: Keypoint-based object detection.</li>
@@ -496,7 +497,32 @@
 
 
 
+        <a id="service"></a>
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+          <td style="padding:20px;width:100%;vertical-align:middle">
+            <heading>Academic Service</heading>
+          </td>
+        </tr>
+      </tbody></table>
 
+
+        <table width="100%" align="center" border="0" cellpadding="20">
+          <tbody>
+            <tr>
+              <!-- <td style="padding:20px;width:25%;vertical-align:middle"> -->
+                <!-- <img src="main_page/images/teaching.png" width="160"> -->
+              <!-- </td> -->
+              <!-- <td width="100%" valign="center" style="line-height: 15px;"> -->
+              <td width="100%" style="width:100%; padding:0 0px;">
+                <ul class="navlist">
+                  <li>Programme Committee for AAAI.</li>
+                  <li>Reviewer for TPAMI, TIP, CVPR, ICCV, ECCV, ICRA, NeurIPS, ICLR, ICML, MM, etc. </li>
+                </ul>
+              </td>
+            </tr>
+          </tbody>
+        </table>
 
         <a id="teaching"></a>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
@@ -527,32 +553,7 @@
         </table>
 
 
-        <a id="service"></a>
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-          <tr>
-          <td style="padding:20px;width:100%;vertical-align:middle">
-            <heading>Academic Service</heading>
-          </td>
-        </tr>
-      </tbody></table>
 
-
-        <table width="100%" align="center" border="0" cellpadding="20">
-          <tbody>
-            <tr>
-              <!-- <td style="padding:20px;width:25%;vertical-align:middle"> -->
-                <!-- <img src="main_page/images/teaching.png" width="160"> -->
-              <!-- </td> -->
-              <!-- <td width="100%" valign="center" style="line-height: 15px;"> -->
-              <td width="100%" style="width:100%; padding:0 0px;">
-                <ul class="navlist">
-                  <li>Programme Committee for AAAI.</li>
-                  <li>Reviewer for TPAMI, TIP, CVPR, ICCV, ECCV, ICRA, NeurIPS, ICLR, ICML, MM, etc. </li>
-                </ul>
-              </td>
-            </tr>
-          </tbody>
-        </table>
         <!-- <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
           <tr>
             <td>
