--- a/index.html
+++ b/index.html
@@ -111,6 +111,8 @@
                 <a href="https://scholar.google.com/citations?user=VuKS1VQAAAAJ">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://twitter.com/yangcao_">Twitter</a> &nbsp/&nbsp
                 <a href="https://github.com/yangcaoai">Github</a> &nbsp/&nbsp
+                <a href="https://orcid.org/0000-0003-3830-7094">ORCID</a> &nbsp/&nbsp
+                
 		<a href="https://www.linkedin.com/in/yang-cao-75b864148">LinkedIn</a>
               </p>
             </td>
