--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@ applied at the League of Legends 2021 World Championship. Over <strong>4.5 milli
               <td width="100%" style="width:100%; padding:0 0px;">
                 <ul class="navlist">
                   <li>Programme Committee for AAAI2025.</li>
-                  <li>Reviewer for TPAMI, TIP, CVPR(2020-2024), ICCV2023, ECCV2024, NeurIPS(2023-2024), ICLR(2023-2025), ICML2024, MM2024, ICRA(2023-2024), etc. </li>
+                  <li>Reviewer for TPAMI, TIP, TNNLS, CVPR(2020-2024), ICCV2023, ECCV2024, NeurIPS(2023-2024), ICLR(2023-2025), ICML2024, MM2024, ICRA(2023-2024), etc. </li>
                 </ul>
               </td>
             </tr>
