<feat>: update 3DGS-DET and UNIT

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
               <!-- <div id='ssrnet_anim' class='hidden'>
                 <a href=""><img src="images/ECCV2012_small.gif"></a>
               </div> -->
-              <div id='switchnerf_still'><img src="images/3dgs_det_fig1.png.png" width="200"></div>
+              <div id='switchnerf_still'><img src="images/3dgs_det_fig1.png" width="200"></div>
               <script type="text/javascript">
                 function switchnerf_start() {
                   document.getElementById('eccv12_anim').style.display = 'inline';
@@ -167,7 +167,7 @@
               <br>
               <!-- <a href="switchnerf">project page</a> / -->
               <a href="https://arxiv.org/pdf/2410.01647">paper</a> /
-              <a href="https://github.com/yangcaoai/3DGS-DET">code</a> /
+              <a href="https://github.com/yangcaoai/3DGS-DET">code</a> 
 <!--               <a href="https://www.bilibili.com/video/BV1anV7e8EoD/?share_source=copy_web&vd_source=8e7b288f904dcf9e4dfb9432677c50ea">talk</a>  -->
 <!--               <a href="https://openreview.net/forum?id=QW5ouyyIgG">openreview</a> /
 <!--               <a href="https://yangcaoai.github.io/publications/CoDA.html">project</a> --> -->
@@ -258,7 +258,7 @@
               <br>
               <!-- <a href="switchnerf">project page</a> / -->
               <a href="https://arxiv.org/pdf/2409.04095">paper</a> /
-              <a href="https://github.com/yeezhu/UNIT">code</a> /
+              <a href="https://github.com/yeezhu/UNIT">code</a> 
 <!--               <a href="https://www.bilibili.com/video/BV1anV7e8EoD/?share_source=copy_web&vd_source=8e7b288f904dcf9e4dfb9432677c50ea">talk</a>  -->
 <!--               <a href="https://openreview.net/forum?id=QW5ouyyIgG">openreview</a> /
 <!--               <a href="https://yangcaoai.github.io/publications/CoDA.html">project</a> --> -->
