--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
               <a href="https://github.com/yangcaoai/3DGS-DET">code</a> 
 <!--               <a href="https://www.bilibili.com/video/BV1anV7e8EoD/?share_source=copy_web&vd_source=8e7b288f904dcf9e4dfb9432677c50ea">talk</a>  -->
 <!--               <a href="https://openreview.net/forum?id=QW5ouyyIgG">openreview</a> /
-<!--               <a href="https://yangcaoai.github.io/publications/CoDA.html">project</a> --> -->
+<!--               <a href="https://yangcaoai.github.io/publications/CoDA.html">project</a> --> 
 <!--              Code and paper will be updated soon.-->
               <!-- <a href="data/BarronMalikECCV2012.bib">bibtex</a> / -->
               <!-- <a href="https://drive.google.com/file/d/12x8mhqpFsA6p0u6ZQW-ieRKF8hlQBKKe/view?usp=sharing">poster</a> / -->
@@ -261,7 +261,7 @@
               <a href="https://github.com/yeezhu/UNIT">code</a> 
 <!--               <a href="https://www.bilibili.com/video/BV1anV7e8EoD/?share_source=copy_web&vd_source=8e7b288f904dcf9e4dfb9432677c50ea">talk</a>  -->
 <!--               <a href="https://openreview.net/forum?id=QW5ouyyIgG">openreview</a> /
-<!--               <a href="https://yangcaoai.github.io/publications/CoDA.html">project</a> --> -->
+<!--               <a href="https://yangcaoai.github.io/publications/CoDA.html">project</a> --> 
 <!--              Code and paper will be updated soon.-->
               <!-- <a href="data/BarronMalikECCV2012.bib">bibtex</a> / -->
               <!-- <a href="https://drive.google.com/file/d/12x8mhqpFsA6p0u6ZQW-ieRKF8hlQBKKe/view?usp=sharing">poster</a> / -->
