--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                 <papertitle>UNIT: Unifying Image and Text Recognition in One Vision Encoder</papertitle>
               </a>
               <br>
-              Yi Zhu, Yanpeng Zhou, Chunwei Wang, <strong>Yang Cao*</strong>, Jianhua Han, Lu Hou, Hang Xu
+              Yi Zhu, Yanpeng Zhou, Chunwei Wang, <strong>Yang Cao</strong>, Jianhua Han, Lu Hou, Hang Xu
               <br>
               <em>NeurIPS</em>, 2024
               <br>
