--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 <papertitle>3DGS-DET: Empower 3D Gaussian Splatting with Boundary Guidance and Box-Focused Sampling for 3D Object Detection</papertitle>
               </a>
               <br>
-              <strong>Yang Cao*</strong>, Yuanliang Jv*, Dan Xu.
+              <strong>Yang Cao*</strong>, Yuanliang Ju*, Dan Xu.
               <br>
               <em>Arxiv</em>, 2024
               <br>
