--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
               <br>
               <!-- <a href="switchnerf">project page</a> / -->
               <a href="https://arxiv.org/pdf/2410.01647">paper</a> /
-              <a href="https://github.com/yangcaoai/3DGS-DET">code</a> 
-              <a href="https://huggingface.co/papers?date=2024-10-03">**Top-10** in Hugging Face-Daily Papers</a> 
+              <a href="https://github.com/yangcaoai/3DGS-DET">code</a> /
+              <a href="https://huggingface.co/papers?date=2024-10-03"><strong>Top-10</strong> in Hugging Face Daily Papers</a> 
 <!--               <a href="https://www.bilibili.com/video/BV1anV7e8EoD/?share_source=copy_web&vd_source=8e7b288f904dcf9e4dfb9432677c50ea">talk</a>  -->
 <!--               <a href="https://openreview.net/forum?id=QW5ouyyIgG">openreview</a> /
 <!--               <a href="https://yangcaoai.github.io/publications/CoDA.html">project</a> --> 
