--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
               <br>
               <!-- <a href="switchnerf">project page</a> / -->
               <a href="https://arxiv.org/pdf/2406.00830">paper</a> /
-              <a href="https://github.com/yangcaoai/CoDA_NeurIPS2023">code</a> /
-              <a href="https://www.bilibili.com/video/BV1anV7e8EoD/?share_source=copy_web&vd_source=8e7b288f904dcf9e4dfb9432677c50ea">talk</a> 
+              <a href="https://www.bilibili.com/video/BV1anV7e8EoD/?share_source=copy_web&vd_source=8e7b288f904dcf9e4dfb9432677c50ea">talk</a> /
+               <a href="https://github.com/yangcaoai/CoDA_NeurIPS2023">code</a> <a href="https://github.com/yangcaoai/CoDA_NeurIPS2023"><img alt="GitHub stars" src="https://img.shields.io/github/stars/yangcaoai/CoDA_NeurIPS2023"></a>
 <!--               <a href="https://openreview.net/forum?id=QW5ouyyIgG">openreview</a> /
               <a href="https://yangcaoai.github.io/publications/CoDA.html">project</a> -->
 <!--              Code and paper will be updated soon.-->
@@ -303,10 +303,11 @@
               <br>
               <!-- <a href="switchnerf">project page</a> / -->
               <a href="https://arxiv.org/abs/2310.02960">paper</a> /
-              <a href="https://github.com/yangcaoai/CoDA_NeurIPS2023">code</a> /
               <a href="https://openreview.net/forum?id=QW5ouyyIgG">openreview</a> /
               <a href="https://yangcaoai.github.io/publications/CoDA.html">project</a> /
-                            <a href="https://www.bilibili.com/video/BV1anV7e8EoD/?share_source=copy_web&vd_source=8e7b288f904dcf9e4dfb9432677c50ea">talk</a> 
+              <a href="https://www.bilibili.com/video/BV1anV7e8EoD/?share_source=copy_web&vd_source=8e7b288f904dcf9e4dfb9432677c50ea">talk</a>  /
+              <a href="https://github.com/yangcaoai/CoDA_NeurIPS2023">code</a> <a href="https://github.com/yangcaoai/CoDA_NeurIPS2023"><img alt="GitHub stars" src="https://img.shields.io/github/stars/yangcaoai/CoDA_NeurIPS2023"></a>
+ 
 <!--              Code and paper will be updated soon.-->
               <!-- <a href="data/BarronMalikECCV2012.bib">bibtex</a> / -->
               <!-- <a href="https://drive.google.com/file/d/12x8mhqpFsA6p0u6ZQW-ieRKF8hlQBKKe/view?usp=sharing">poster</a> / -->
