--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               <p> Greetings! I'm Yang Cao, a Ph.D. student in <a href="https://www.ust.hk/home">HKUST</a> supervised by <a href="https://www.danxurgb.net/">Prof. Dan Xu</a>.
               </p>
               <p>
-                Before that, I received my Master's Degree in Computer Science from <a href="https://en.nankai.edu.cn/">Nankai University</a>, supervised by <a href="https://mmcheng.net/cmm/">Prof. Ming-Ming Cheng</a>.
+                Before that, I received my Master's Degree from <a href="https://en.nankai.edu.cn/">Nankai University</a>, supervised by <a href="https://mmcheng.net/cmm/">Prof. Ming-Ming Cheng</a>.
               </p>
               <p>
                 My recent research interests mainly focus on the topics which are interesting and have large application potential in the real world, like <strong>3D vision, open-vocabulary perception</strong> and <strong>multi-modal learning</strong>, etc. 
@@ -108,7 +108,7 @@
                 <a href="mailto:yangcao.cs@gmail.com">Email</a> &nbsp/&nbsp
                 <a href="assets//CV_YangCao_HKUST.pdf">CV</a> &nbsp/&nbsp
                 <!-- <a href="data/JonBarron-bio.txt">Bio</a> &nbsp/&nbsp -->
-                <a href="https://scholar.google.com/citations?user=VuKS1VQAAAAJ">Google Scholar</a> &nbsp/&nbsp
+                <a href="https://scholar.google.com/citations?user=VuKS1VQAAAAJ">Google Scholar</a> <a href='https://scholar.google.com/citations?user=VuKS1VQAAAAJ&hl=en'><img src="https://img.shields.io/endpoint?url={{ url | url_encode }}&logo=Google%20Scholar&labelColor=f6f6f6&color=9cf&style=flat&label=citations"></a> &nbsp/&nbsp
                 <a href="https://twitter.com/yangcao_">Twitter</a> &nbsp/&nbsp
                 <a href="https://github.com/yangcaoai">Github</a> &nbsp/&nbsp
                 <a href="https://orcid.org/0000-0003-3830-7094">ORCID</a> &nbsp/&nbsp
