--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <a href="mailto:yangcao.cs@gmail.com">Email</a> &nbsp/&nbsp
                 <a href="assets//CV_YangCao_HKUST.pdf">CV</a> &nbsp/&nbsp
                 <!-- <a href="data/JonBarron-bio.txt">Bio</a> &nbsp/&nbsp -->
-                <a href="https://scholar.google.com/citations?user=VuKS1VQAAAAJ">Google Scholar</a> <a href='https://scholar.google.com/citations?user=VuKS1VQAAAAJ&hl=en'><img src="https://img.shields.io/endpoint?url={{ url | url_encode }}&logo=Google%20Scholar&labelColor=f6f6f6&color=9cf&style=flat&label=citations"></a> &nbsp/&nbsp
+                <a href="https://scholar.google.com/citations?user=VuKS1VQAAAAJ">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://twitter.com/yangcao_">Twitter</a> &nbsp/&nbsp
                 <a href="https://github.com/yangcaoai">Github</a> &nbsp/&nbsp
                 <a href="https://orcid.org/0000-0003-3830-7094">ORCID</a> &nbsp/&nbsp
