--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@ applied at the League of Legends 2021 World Championship. Over <strong>4.5 milli
               <!-- <td width="100%" valign="center" style="line-height: 15px;"> -->
               <td width="100%" style="width:100%; padding:0 0px;">
                 <ul class="navlist">
-                  <li>Reviewer for TPAMI, TIP, TNNLS, CVPR(2020-2025), ICCV2023, ECCV2024, NeurIPS(2023-2024), ICLR(2023-2025), ICML2024, MM2024, ICRA(2023-2025), etc. </li>
+                  <li>Reviewer for TPAMI, TIP, TNNLS, CVPR(2020-2025), ICCV2023, ECCV2024, NeurIPS(2023-2024), ICLR(2023-2025), ICML(2024-2025), MM2024, ICRA(2023-2025), etc. </li>
                   <li>Programme Committee for AAAI2025.</li>
                 </ul>
               </td>
