--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
               <br>
               <strong>Yang Cao</strong>, Yihan Zeng, Hang Xu, Dan Xu.
               <br>
-              <em>Arxiv</em>, 2024
+              <em>TPAMI</em>, 2025
               <br>
               <!-- <a href="switchnerf">project page</a> / -->
               <a href="https://arxiv.org/pdf/2406.00830">paper</a> /
