--- a/publications/CoDA.html
+++ b/publications/CoDA.html
@@ -189,6 +189,13 @@ Extensive experiments on two challenging datasets (<i>i.e.</i>, SUN-RGBD and Sca
   booktitle={NeurIPS},
   year={2023}
 }
+
+@article{cao2024collaborative,
+            title={Collaborative Novel Object Discovery and Box-Guided Cross-Modal Alignment for Open-Vocabulary 3D Object Detection},
+            author={Yang Cao and Yihan Zeng and Hang Xu and Dan Xu},
+            journal={IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)},
+            year={2025}
+}
 </pre>
 <!--                    <br>-->
 <!--                    This research is supported in part by HKUST-SAIL joint research funding,-->
