--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
               <br>
               <strong>Yang Cao*</strong>, Yuanliang Ju*, Dan Xu.
               <br>
-              <em>Arxiv</em>, 2024 (<strong>Top-5</strong> </a> in Hugging Face Daily Papers)
+              <em>Arxiv</em>, 2024 (<a href="https://huggingface.co/papers?date=2024-10-03" style="color: #FF5733; font-weight: bold;"> <strong>Top-5</strong> </a> in Hugging Face Daily Papers)
               <br>
               <!-- <a href="switchnerf">project page</a> / -->
               <a href="https://arxiv.org/pdf/2410.01647">paper</a> /
