--- a/index.html
+++ b/index.html
@@ -610,8 +610,7 @@ applied at the League of Legends 2021 World Championship. Over <strong>4.5 milli
               <!-- <td width="100%" valign="center" style="line-height: 15px;"> -->
               <td width="100%" style="width:100%; padding:0 0px;">
                 <ul class="navlist">
-                  <li>Reviewer for TPAMI, TIP, TNNLS, RA-L, CVPR(2020-2026), ICCV(2023,2025), ECCV2024, NeurIPS(2023-2025), ICLR(2023-2026), ICML(2024-2025), MM(2024-2025), ICRA(2023-2025), etc. </li>
-                  <li>Programme Committee for AAAI(2025-2026).</li>
+                  <li>Reviewer for TPAMI, TIP, TNNLS, RA-L, CVPR(2020-2026), ICCV(2023,2025), ECCV2024, NeurIPS(2023-2025), ICLR(2023-2026), ICML(2024-2025), MM(2024-2025), ICRA(2023-2025), AAAI(2025-2026), etc. </li>
                 </ul>
               </td>
             </tr>
